--- a/car_shop_docker/.env.sample
+++ b/car_shop_docker/.env.sample
@@ -1,5 +1,6 @@
 MYSQL_PASSWORD=1234
 MYSQL_ROOT_PASSWORD=12345
+QUICKSTART=auto_home1_quickstart_on_prestashop_1.7.2.2.zip
 GIT_REPO=car_shop
 GIT_CLONE=https://github.com/lehong3000/${GIT_REPO}.git
 SOURCE_PATH=auto_store_home1_qs
