--- a/car_shop_docker/web.conf
+++ b/car_shop_docker/web.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
 	#ServerName www.example.com
 	ServerAdmin webmaster@localhost
-	DocumentRoot /home/${GIT_REPO}/${SOURCE_PATH}
+	DocumentRoot /home/prestashop/${GIT_REPO}/${SOURCE_PATH}
 
-	ErrorLog /home/logs/error.log
-	CustomLog /home/logs/access.log combined
+	ErrorLog /home/prestashop/logs/error.log
+	CustomLog /home/prestashop/logs/access.log combined
 
-	<Directory /home/${GIT_REPO}/${SOURCE_PATH}>
+	<Directory /home/prestashop/${GIT_REPO}/${SOURCE_PATH}>
 		Order allow,deny
 		Allow from all
 		Require all granted
