--- a/car_shop_docker/web/Dockerfile
+++ b/car_shop_docker/web/Dockerfile
@@ -1,5 +1,13 @@
+FROM  alpine:latest as build
+ARG QUICKSTART
+WORKDIR /
+COPY ./auto_quickstart/${QUICKSTART} .
+RUN unzip -q auto_home1_quickstart_on_prestashop_1.7.2.2.zip
+
 FROM prestashop/prestashop:1.7.8.6-apache
-RUN echo starting.. \
-	&& mkdir /home/logs && chown www-data:www-data /home/logs \
-	&& rm -Rf /var/www/html && mkdir /var/www/html && chown www-data:www-data /var/www/html && chmod 777 /var/www/html \
-	&& apt-get update && apt-get install git -y
+ARG GIT_REPO
+ARG SOURCE_PATH
+RUN rm -Rf /var/www/html && mkdir /var/www/html && chown www-data:www-data /var/www/html && chmod 777 /var/www/html \
+	&& mkdir /home/prestashop/logs && chown www-data:www-data /home/prestashop/logs
+COPY --chown=www-data:www-data --from=build /auto_store_home1_qs /home/prestashop/${GIT_REPO}/${SOURCE_PATH}
+EXPOSE 80
